welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:8: error: '<-' expected but ';' found.
		avance();gauche();avance();droite();
                                 ^Array1:8: error: '<-' expected but ';' found.
		avance();gauche();avance();droite();
                                          ^Array1:8: error: '<-' expected but ';' found.
		avance();gauche();avance();droite();
                                                   ^Array1:9: error: '<-' expected but ';' found.
    	baisseBrosse();
                      ^Array1:10: error: illegal start of simple pattern
    	for (k<-1 to getMondeHauteur()){
        ^Array1:22: error: '<-' expected but '}' found.
}
^