welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {

	var T = new Array [Color](h)
	for (i <- 0 to (getMondeHauteur()-1) {
		T(i) = getCouleurSol();avance();
		}
		avance();gauche();avance();droite();
    	baisseBrosse();
    	for (k<-1 to getMondeHauteur()){
    	
    	
    	for (j<-1 to getMondeHauteur()){
    	setCouleurBrosse(T((j-1)%6));
    	if(getCouleurSol()==Color.pink){
    	leveBrosse();avance();gauche();avance();droite();avance();baisseBrosse();
    	}else{
    		avance();	
    	}
    	}
    	}
}
    	

